@@ -271,6 +271,7 @@ DB_ALERT
 	char	*message;
 	int	status;
 	int	retries;
+	int	delay;
 };
 
 DB_ESCALATION_RULE
@@ -316,7 +317,7 @@ int	DBadd_history(int itemid, double value, int clock);
 int	DBadd_history_log(int itemid, char *value, int clock, int timestamp, char *source, int severity);
 int	DBadd_history_str(int itemid, char *value, int clock);
 int	DBadd_service_alarm(int serviceid,int status,int clock);
-int	DBadd_alert(int actionid, int mediatypeid, char *sendto, char *subject, char *message);
+int	DBadd_alert(int actionid, int triggerid, int mediatypeid, char *sendto, char *subject, char *message);
 void	DBupdate_triggers_status_after_restart(void);
 int	DBget_prev_trigger_value(int triggerid);
 /*int	DBupdate_trigger_value(int triggerid,int value,int clock);*/
