@@ -520,6 +520,13 @@ int	add_alarm(int triggerid,int status,int clock,int *alarmid)
 		DBexecute(sql);
 	}
 
+	/* Cancel currently active alerts */
+	if(status == TRIGGER_VALUE_FALSE || status == TRIGGER_VALUE_TRUE)
+	{
+		snprintf(sql,sizeof(sql)-1,"update alerts set retries=3,error='Trigger changed its status. WIll not send repeats.' where triggerid=%d and repeats>0", triggerid);
+		DBexecute(sql);
+	}
+
 	zabbix_log(LOG_LEVEL_DEBUG,"End of add_alarm()");
 	
 	return SUCCEED;
@@ -1199,7 +1206,7 @@ int	DBget_queue_count(void)
 	return res;
 }
 
-int	DBadd_alert(int actionid, int mediatypeid, char *sendto, char *subject, char *message)
+int	DBadd_alert(int actionid, int triggerid,  int mediatypeid, char *sendto, char *subject, char *message)
 {
 	int	now;
 	char	sql[MAX_STRING_LEN];
@@ -1215,7 +1222,7 @@ int	DBadd_alert(int actionid, int mediatypeid, char *sendto, char *subject, char
 	DBescape_string(sendto,sendto_esc,MAX_STRING_LEN);
 	DBescape_string(subject,subject_esc,MAX_STRING_LEN);
 	DBescape_string(message,message_esc,MAX_STRING_LEN);
-	snprintf(sql,sizeof(sql)-1,"insert into alerts (actionid,clock,mediatypeid,sendto,subject,message,status,retries) values (%d,%d,%d,'%s','%s','%s',0,0)",actionid,now,mediatypeid,sendto_esc,subject_esc,message_esc);
+	snprintf(sql,sizeof(sql)-1,"insert into alerts (actionid,triggerid,clock,mediatypeid,sendto,subject,message,status,retries) values (%d,%d,%d,%d,'%s','%s','%s',0,0)",actionid,triggerid,now,mediatypeid,sendto_esc,subject_esc,message_esc);
 	DBexecute(sql);
 
 	return SUCCEED;
